@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-21T16:10:20Z",
+  "timestamp" : "2023-10-22T08:10:34Z",
   "count_outdated" : 1054,
   "uniques_outdated" : 669,
-  "count" : 1092,
-  "uniques" : 694,
+  "count" : 1093,
+  "uniques" : 695,
   "clones" : [
     {
       "timestamp": "2023-10-08T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 3,
       "count_minmax": [ 2, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
